Added additional template of older portal

--- a/default-logins/versa/versa-default-login-old.yaml
+++ b/default-logins/versa/versa-default-login-old.yaml
@@ -1,4 +1,4 @@
-id: versa-sdwan-default-login
+id: versa-sdwan-default-login-old
 
 info:
   name: Versa Networks SD-WAN Application Default Login
@@ -11,20 +11,20 @@ info:
 requests:
   - raw:
       - |
-        GET /versa/login HTTP/1.1
+        GET /versa/login.html HTTP/1.1
         Host: {{Hostname}}
         Content-Length: 52
         Accept-Encoding: gzip, deflate
 
       - |
-        POST /versa/j_spring_security_check HTTP/1.1
+        POST /versa/login HTTP/1.1
         Host: {{Hostname}}
         Content-Length: 52
         Content-Type: application/x-www-form-urlencoded
-        Cookie: VD-CSRF-TOKEN={{csrf-token}}; JSESSIONID={{session}}
+        Cookie: ANAL-CSRF-TOKEN={{csrf-token}}; JSESSIONID={{session}}
         Accept-Encoding: gzip, deflate
 
-        _csrf={{csrf-token}}&j_username=Administrator&j_password=versa123&submit=
+        username=Administrator&password=versa123&sso=systemRadio
 
     extractors:
       - type: kval
@@ -32,7 +32,7 @@ requests:
         name: csrf-token
         internal: true
         kval:
-          - vd-csrf-token
+          - anal-csrf-token
 
       - type: kval
         part: header
@@ -48,8 +48,7 @@ requests:
         dsl:
           - 'status_code_2 == 302'
           - "contains(tolower(all_headers_2), 'jsessionid')"
-          - "contains(tolower(all_headers_2), 'vd-csrf-token')"
-          - "contains(tolower(all_headers_2), 'location: /versa/')"
+          - "contains(tolower(all_headers_2), 'location: /versa/index.html')"
         condition: and
 
       - type: dsl
