more strict matcher

--- a/misconfiguration/shell-history.yaml
+++ b/misconfiguration/shell-history.yaml
@@ -39,6 +39,7 @@ requests:
 
       - type: word
         words:
-          - "<html"
-        part: body
+          - "html>"
+          - "text/html"
+        part: all
         negative: true
