Added more strict matchers

--- a/misconfiguration/aem/aem-crx-bypass.yaml
+++ b/misconfiguration/aem/aem-crx-bypass.yaml
@@ -16,7 +16,23 @@ requests:
         Referer: {{BaseURL}}
         Connection: close
         Accept-Encoding: gzip, deflate
+
+    matchers-condition: and
     matchers:
       - type: word
+        part: body
         word:
-          - "results:"
+          - '"results:"'
+          - '"path:"'
+          - '"pid":'
+        condition: and
+
+      - type: word
+        part: header
+        words:
+          - 'application/json'
+
+      - type: status
+        status:
+          - 200
+
