--- a/vulnerabilities/wordpress/wp-multiple-theme-ssrf.yaml
+++ b/vulnerabilities/wordpress/wp-multiple-theme-ssrf.yaml
@@ -1,6 +1,7 @@
-id: multiple-theme-ssrf
+id: wp-multiple-theme-ssrf
+
 info:
-  name: Multiple Themes - Unauthenticated Function Injection
+  name: WordPress Multiple Themes - Unauthenticated Function Injection
   author: madrobot
   severity: high
   tags: wordpress,rce,ssrf
@@ -25,6 +26,7 @@ requests:
           - "Example Domain"
           - "protocol_version"
         part: body
+
       - type: status
         status:
           - 200
