--- a/network/smtp-detection.yaml
+++ b/network/smtp-detection.yaml
@@ -1,10 +1,11 @@
-id: SMTP server detection
+id: smtp-service-detection
+
 info:
-  name: SMTP
+  name: SMTP Service Detection
   author: pussycat0x
   severity: info
   tags: network,service,smtp
-  description: 
+
 network:
   - inputs:
       - data: "\r\n"
