--- a/network/vsftpd-detection.yaml
+++ b/network/vsftpd-detection.yaml
@@ -1,11 +1,10 @@
-id: vsFTPd 2.34 Detection
+id: vsftpd-detection
 
 info:
-  name: vsFTPd Detection
+  name: VSFTPD v2.3.4 Backdoor Command Execution
   author: pussycat0x
-  severity: Critical
-  tags: network,openssh,vsftpd,ftp
-  description: vsFTPd Version Detecting
+  severity: critical
+  tags: network,vsftpd,ftp
   reference: https://www.rapid7.com/db/modules/exploit/unix/ftp/vsftpd_234_backdoor/
 
 network:
