--- a/exposed-panels/zoho-manageengine-adaudit.yaml
+++ b/exposed-panels/zoho-manageengine-adaudit.yaml
@@ -5,7 +5,7 @@ info:
   author: dhiyaneshDK
   severity: info
   reference: https://www.shodan.io/search?query=http.title%3A%22ManageEngine+-+ADManager+Plus%22
-  tags: panel
+  tags: panel,zoho
 
 requests:
   - method: GET
@@ -17,6 +17,7 @@ requests:
       - type: word
         words:
           - '<title>ManageEngine - ADManager Plus</title>'
+
       - type: status
         status:
           - 200
