--- a/exposed-panels/zoho-manageengine-analyticsplus.yaml
+++ b/exposed-panels/zoho-manageengine-analyticsplus.yaml
@@ -5,7 +5,7 @@ info:
   author: dhiyaneshDK
   severity: info
   reference: https://fofa.so/result?qbase64=YXBwPSJaT0hPLea1gemHj%2BeuoeeQhiI%3D
-  tags: panel
+  tags: panel,zoho
 
 requests:
   - method: GET
@@ -17,6 +17,7 @@ requests:
       - type: word
         words:
           - '<title>ManageEngine Analytics Plus</title>'
+
       - type: status
         status:
           - 200
