--- a/vulnerabilities/jolokia/jolokia-heap-info-disclosure.yaml
+++ b/vulnerabilities/jolokia/jolokia-heap-info-disclosure.yaml
@@ -4,7 +4,7 @@ info:
   name: Jolokia Java Heap Information Disclosure
   author: milo2012
   severity: info
-  tags: jolokia
+  tags: jolokia,disclosure
 
 requests:
   - raw:
