--- a/exposures/configs/javascript-env.yaml
+++ b/exposures/configs/javascript-env.yaml
@@ -1,7 +1,7 @@
 id: javascript-env
 
 info:
-  name: JavaScript Environment Detection
+  name: JavaScript Environment Config
   author: pdp
   severity: low
   description: Detects common JavaScript environment configuration files.
@@ -16,13 +16,23 @@ requests:
       - "{{BaseURL}}/env.test.js"
       - "{{BaseURL}}/env.dev.js"
       - "{{BaseURL}}/env.prod.js"
+
     matchers-condition: and
     matchers:
 
       - type: status
         status:
           - 200
+
       - type: word
         part: header
         words:
           - "application/javascript"
+
+      - type: word
+        part: body
+        words:
+          - "module.exports"
+          - "const audience"
+          - "const domain"
+        condition: or
