--- a/exposures/configs/javascript-env.yaml
+++ b/exposures/configs/javascript-env.yaml
@@ -35,4 +35,10 @@ requests:
           - "module.exports"
           - "const audience"
           - "const domain"
+          - "NODE_ENV"
+          - "LOG_LEVEL"
+          - "TOKEN"
+          - "KEY"
+          - "PASSWORD"
+          - "VERSION"
         condition: or
