minor update to check full header

--- a/exposures/configs/javascript-env.yaml
+++ b/exposures/configs/javascript-env.yaml
@@ -24,10 +24,10 @@ requests:
         status:
           - 200
 
-      - type: word
+      - type: dsl
         part: header
-        words:
-          - "application/javascript"
+        dsl:
+          - "contains(tolower(all_headers), 'content-type: application/javascript')"
 
       - type: word
         part: body
