--- a/technologies/sonicwall-email-security-detect.yaml
+++ b/technologies/sonicwall-email-security-detect.yaml
@@ -12,7 +12,7 @@ info:
 requests:
   - method: GET
     path:
-      - "{{BaseURL}}/pics/branding/favicon.ico"
+      - "{{BaseURL}}/favicon.ico"
 
     matchers:
       - type: dsl
