--- a/exposed-panels/wildfly-panel.yaml
+++ b/exposed-panels/wildfly-panel.yaml
@@ -10,8 +10,7 @@ info:
 requests:
   - method: GET
     path:
-      - "{{BaseURL}}/"
-    redirects: true
+      - "{{BaseURL}}"
 
     matchers-condition: and
     matchers:
