--- a/exposed-panels/key-cloak-admin-panel.yaml
+++ b/exposed-panels/key-cloak-admin-panel.yaml
@@ -3,16 +3,25 @@ id: key-cloak-admin-panel
 info:
   name: Keycloak Admin Panel
   author: incogbyte
-  severity: low
+  severity: info
   tags: panel
 
 requests:
   - method: GET
     path:
       - "{{BaseURL}}/auth/admin/master/console/"
+      - "{{BaseURL}}/auth/admin"
 
+    redirects: true
+    max-redirects: 2
     matchers:
+
       - type: word
         words:
           - "<a href=\"http://www.keycloak.org\">"
+        part: body
+
+      - type: word
+        words:
+          - "keycloak"
         part: body
