--- a/exposed-panels/key-cloak-admin-panel.yaml
+++ b/exposed-panels/key-cloak-admin-panel.yaml
@@ -2,7 +2,7 @@ id: key-cloak-admin-panel
 
 info:
   name: Keycloak Admin Panel
-  author: incogbyte
+  author: incogbyte,righettod
   severity: info
   tags: panel
 
@@ -19,9 +19,6 @@ requests:
       - type: word
         words:
           - "<a href=\"http://www.keycloak.org\">"
-        part: body
-
-      - type: word
-        words:
           - "keycloak"
         part: body
+        condition: or
