--- a/default-logins/spectracom/spectracom-default-credential.yaml
+++ b/default-logins/spectracom/spectracom-default-credential.yaml
@@ -1,9 +1,10 @@
-id: Spectracom
+id: spectracom-default-credential
+
 info:
   name: Spectracom Default creds
   author: madrobot
   severity: medium
-  tags: creds
+  tags: spectracom,default-login
 
 requests:
   - raw:
@@ -24,6 +25,8 @@ requests:
           - "spectracom"
           - "deleted"
         part: header
+        condition: and
+
       - type: status
         status:
           - 302
