--- a/exposed-panels/csod-panel.yaml
+++ b/exposed-panels/csod-panel.yaml
@@ -8,7 +8,7 @@ info:
 requests:
   - method: GET
     path:
-      - "{{BaseURL}}/"
+      - "{{BaseURL}}"
     redirects: true
     max-redirects: 5
     matchers:
