Added additional path

--- a/exposed-panels/sapfiori-panel.yaml
+++ b/exposed-panels/sapfiori-panel.yaml
@@ -11,12 +11,20 @@ requests:
   - method: GET
     path:
       - "{{BaseURL}}/fiori"
-      - "{{BaseURL}}/"
+      - "{{BaseURL}}/irj/portal/fiori"
 
+    matchers-condition: or
     matchers:
       - type: word
         words:
-          - "/fiori"
-          - "fioriLogin"
+          - 'fioriLogin'
+          - 'action="/fiori"'
         part: body
-        condition: or
+        condition: and
+
+      - type: word
+        words:
+          - "UIPPortalPath"
+          - "/irj/portal/fiori"
+        part: body
+        condition: and
