--- a/exposed-panels/itop-panel.yaml
+++ b/exposed-panels/itop-panel.yaml
@@ -13,6 +13,7 @@ requests:
       - "{{BaseURL}}/pages/UI.php"
       - "{{BaseURL}}/simple/pages/UI.php"
 
+    matchers-condition: and
     matchers:
       - type: word
         words:
@@ -20,3 +21,7 @@ requests:
           - "iTop login"
         part: body
         condition: or
+
+      - type: status
+        status:
+          - 200
