--- a/misconfiguration/unauthenticated-glances.yaml
+++ b/misconfiguration/unauthenticated-glances.yaml
@@ -1,4 +1,4 @@
-id: glances-unauth
+id: unauthenticated-glances
 
 info:
   name: Glances Unauthenticated Panel
@@ -11,8 +11,17 @@ info:
 requests:
   - method: GET
     path:
-      - '{{BaseURL}}:61208'
+      - '{{BaseURL}}'
+
+    matchers-condition: and
     matchers:
       - type: status
         status:
           - 200
+
+      - type: word
+        part: body
+        words:
+          - "<title>Monitor</title>"
+
+
