--- a/misconfiguration/jetty-showcontexts-enable.yaml
+++ b/misconfiguration/jetty-showcontexts-enable.yaml
@@ -4,6 +4,7 @@ info:
   name: Jetty showContexts Enable in DefaultHandler
   author: dhiyaneshDK
   severity: low
+  reference: https://github.com/jaeles-project/jaeles-signatures/blob/master/common/jetty-showcontexts-enable.yaml
   tags: jetty
 
 requests:
