--- a/vulnerabilities/other/coldfusion-debug-xss.yaml
+++ b/vulnerabilities/other/coldfusion-debug-xss.yaml
@@ -4,6 +4,7 @@ info:
   name: Adobe ColdFusion Debug Page XSS
   author: dhiyaneshDK
   severity: medium
+  reference: https://github.com/jaeles-project/jaeles-signatures/blob/master/common/coldfusion-debug-xss.yaml
   tags: adobe,xss
 
 requests:
