--- a/default-logins/wifisky/wifisky-default-password.yaml
+++ b/default-logins/wifisky/wifisky-default-password.yaml
@@ -6,23 +6,29 @@ info:
   severity: high
 
 requests:
-  - method: POST
-    path:
-      - "{{BaseURL}}/login.php?action=login&type=admin"
-    body: |
-      username=admin&password=admin
+  - raw:
+      - |
+        POST /login.php?action=login&type=admin HTTP/1.1
+        Host: {{Hostname}}
+        Accept: */*
+        X-Requested-With: XMLHttpRequest
+        Content-Type: application/x-www-form-urlencoded; charset=UTF-8
+        Connection: close
+
+        username=admin&password=admin
 
     matchers-condition: and
     matchers:
 
       - type: word
         words:
-          - "Content-Type: text/html"
+          - "text/html"
         part: header
 
       - type: word
         words:
-          - '"success":'
+          - '"success":"true"'
+          - '"data":'
         part: body
         condition: and
 
