Added missing matcher

--- a/vulnerabilities/other/jfrog-unauth-build-exposed.yaml
+++ b/vulnerabilities/other/jfrog-unauth-build-exposed.yaml
@@ -18,6 +18,7 @@ requests:
 
         {"name":"","before":"","after":"","direction":"desc","order_by":"date","num_of_rows":100}
 
+    matchers-condition: and
     matchers:
       - type: word
         words:
