--- a/exposed-panels/zentao-detect.yaml
+++ b/exposed-panels/zentao-detect.yaml
@@ -14,7 +14,9 @@ requests:
       - type: word
         words:
           - '"sessionName":"zentaosid"'
+          - '{"version":"'
         part: body
+        condition: and
 
     extractors:
       - type: regex
