--- a/exposed-panels/minio-detect.yaml
+++ b/exposed-panels/minio-detect.yaml
@@ -10,8 +10,12 @@ requests:
   - method: GET
     path:
       - "{{BaseURL}}/minio/login"
+    matchers-condition: and
     matchers:
       - type: word
         words:
           - "<title>MinIO Browser</title>"
         part: body
+      - type: status
+        status:
+          - 200
