--- a/exposed-panels/minio-detect.yaml
+++ b/exposed-panels/minio-detect.yaml
@@ -15,7 +15,9 @@ requests:
       - type: word
         words:
           - "<title>MinIO Browser</title>"
+          - "<title>Minio Browser</title>"
         part: body
+        condition: or
       - type: status
         status:
           - 200
