--- a/wp-vault-lfi.yaml
+++ b/wp-vault-lfi.yaml
@@ -5,7 +5,7 @@ info:
   author: 0x_Akoko
   severity: high
   reference: https://www.exploit-db.com/exploits/40850
-  tags: wp,wordpress,lfi
+  tags: wp-plugin,wordpress,lfi
 
 requests:
   - method: GET
