--- a/exposures/apis/strapi-page.yaml
+++ b/exposures/apis/strapi-page.yaml
@@ -5,7 +5,7 @@ info:
   author: dhiyaneshDk
   severity: info
   reference: https://www.shodan.io/search?query=http.title%3A%22Welcome+to+your+Strapi+app%22
-  tags: panel
+  tags: api,strapi
 
 requests:
   - method: GET
