CVE number was assigned
As stated.

--- a/vulnerabilities/wordpress/wp-plugin-marmoset-viewer-xss.yaml
+++ b/vulnerabilities/wordpress/wp-plugin-marmoset-viewer-xss.yaml
@@ -1,7 +1,7 @@
 id: wp-plugin-marmoset-viewer-xss
 
 info:
-  name: Wordpress Plugin Marmoset Viewer XSS
+  name: Wordpress Plugin Marmoset Viewer XSS [CVE-2021-24495]
   author: johnjhacking
   severity: medium
   tags: wordpress,xss
