condition update as per new bypass

--- a/vulnerabilities/wordpress/wp-plugin-marmoset-viewer-xss.yaml
+++ b/vulnerabilities/wordpress/wp-plugin-marmoset-viewer-xss.yaml
@@ -17,10 +17,14 @@ requests:
       - type: status
         status:
           - 200
+
       - type: word
         words:
           - "</script><svg/onload=alert('{{randstr}}')>"
           - "alert(/{{randstr}}/)"
-          - "Marmoset Viewer"
         part: body
-        condition: and
+        condition: or
+
+      - type: word
+        words:
+          - "Marmoset Viewer"
