--- a/vulnerabilities/other/huawei-router-auth-bypass.yaml
+++ b/vulnerabilities/other/huawei-router-auth-bypass.yaml
@@ -6,9 +6,8 @@ info:
   severity: critical
   description: The default password of this router is the last 8 characters of the device's serial number which exist in the back of the device.
   reference: |
-    - https://www.exploit-db.com/exploits/50059
     - https://www.exploit-db.com/exploits/48310
-  tags: huawei,auth-bypass
+  tags: huawei,auth-bypass,router
 
 requests:
   - raw:
@@ -33,3 +32,5 @@ requests:
         words:
           - "DeviceName"
           - "SerialNumber"
+          - "HardwareVersion"
+        condition: and
