--- a/vulnerabilities/lsoft/listserv_maestro_rce.yaml
+++ b/vulnerabilities/lsoft/listserv_maestro_rce.yaml
@@ -1,26 +1,24 @@
 id: maestro-unauth-rce
 
 info:
-  name: LISTSERV Maestro <= 9.0-8 RCE
+  name: ListSERV Maestro <= 9.0-8 RCE
   author: b0yd
-  severity: high
+  severity: info
   description: CVE-2010-1870 Struts based OGNL remote code execution in ListSERV Maestro before and including version 9.0-8.
+  reference: https://packetstormsecurity.com/files/159643/listservmaestro-exec.txt
 
 requests:
   - method: GET
     path:
       - "{{BaseURL}}/lui/"
+      - "{{BaseURL}}/hub/"
+
     matchers:
       - type: regex
         regex:
           - 'LISTSERV Maestro\s+9\.0-[123456780]'
           - 'LISTSERV Maestro\s+[5678]'
         condition: or
-
-  - method: GET
-    path:
-      - "{{BaseURL}}/hub/"
-    matchers:
 
       - type: regex
         regex:
