--- a/vulnerabilities/lsoft/listserv_maestro_rce.yaml
+++ b/vulnerabilities/lsoft/listserv_maestro_rce.yaml
@@ -13,16 +13,11 @@ requests:
       - "{{BaseURL}}/lui/"
       - "{{BaseURL}}/hub/"
 
-    matchers:
+    extractors:
       - type: regex
         regex:
           - 'LISTSERV Maestro\s+9\.0-[123456780]'
           - 'LISTSERV Maestro\s+[5678]'
-        condition: or
-
-      - type: regex
-        regex:
           - 'Administration Hub 9\.0-[123456780]'
           - 'Administration Hub [5678]'
-        part: body
         condition: or
