--- a/vulnerabilities/lsoft/listserv_maestro_rce.yaml
+++ b/vulnerabilities/lsoft/listserv_maestro_rce.yaml
@@ -5,7 +5,9 @@ info:
   author: b0yd
   severity: info
   description: CVE-2010-1870 Struts based OGNL remote code execution in ListSERV Maestro before and including version 9.0-8.
-  reference: https://packetstormsecurity.com/files/159643/listservmaestro-exec.txt
+  reference: |
+      - https://www.securifera.com/advisories/sec-2020-0001/
+      - https://packetstormsecurity.com/files/159643/listservmaestro-exec.txt
 
 requests:
   - method: GET
