--- a/network/ftp-default-creds.yaml
+++ b/network/ftp-default-creds.yaml
@@ -1,10 +1,11 @@
 id: ftp-default-credentials
 
 info:
-  name: ftp service default credentials
+  name: FTP Service with default credentials
   author: pussycat0x
   severity: critical
-  tags: network,ftp,default_credentials
+  tags: network,ftp,default-login
+
 network:
   - payloads:
       username:
@@ -20,7 +21,7 @@ network:
         - default
         - pass1
         - stingray
-        
+
     attack: clusterbomb
     inputs:
       - data: "USER {{username}}\r\nPASS {{password}}\r\n"
