Update and rename seats.io-login.yaml to seats-login.yaml

--- a/exposed-panels/seats-login.yaml
+++ b/exposed-panels/seats-login.yaml
@@ -1,7 +1,7 @@
-id: seats.io-login
+id: seats-login
 
 info:
-  name: seats.io login
+  name: Seats login
   author: dhiyaneshDK
   severity: info
   reference: https://www.shodan.io/search?query=http.title%3A%22seats.io++%7C+login%22
