--- a/vulnerabilities/other/opensns-rce.yaml
+++ b/vulnerabilities/other/opensns-rce.yaml
@@ -1,10 +1,12 @@
 id: opensns-rce
 
 info:
-  name: OpenSNS RCE
+  name: OpenSNS Remote Code Execution Vulnerability
   author: gy741
   severity: critical
-  reference: http://www.0dayhack.net/index.php/2417/
+  reference: |
+      - http://www.0dayhack.net/index.php/2417/
+      - https://www.pwnwiki.org/index.php?title=OpenSNS_%E9%81%A0%E7%A8%8B%E4%BB%A3%E7%A2%BC%E5%9F%B7%E8%A1%8C%E6%BC%8F%E6%B4%9E
   tags: opensns,rce
 
 requests:
@@ -15,13 +17,17 @@ requests:
 
     matchers-condition: and
     matchers:
+      - type: regex
+        regex:
+          - "((u|g)id=)"
+          - "Microsoft Windows"
+        part: body
+        condition: or
+
       - type: word
         words:
-          - "Microsoft Windows"
-          - "uid="
-          - "gid="
-          - "groups="
-        part: body
+          - "/Application/"
+
 
       - type: status
         status:
