--- a/exposures/configs/configuration-listing.yaml
+++ b/exposures/configs/configuration-listing.yaml
@@ -1,20 +1,26 @@
-xid: configuration-files-detection
+id: configuration-listing
+
 info:
-  name: Sensitive Configuration Files Detection
+  name: Sensitive Configuration Files Listing
   author: j33n1k4
   severity: medium
   description: directory listing of sensitive files
   reference: https://www.exploit-db.com/ghdb/7014
-  tags: config,files,directory-listing
+  tags: config,listing,exposures
+
 requests:
   - method: GET
     path:
       - "{{BaseURL}}/config/"
+
+    matchers-condition: and
     matchers:
       - type: word
         words:
-          - "Index of"
-          - "/config"
+          - "Index of /configs"
+          - "Parent Directory"
+        condition: and
+
       - type: status
         status:
-          - 200    
+          - 200
