new flag for validation

--- a/.github/workflows/template-validate.yml
+++ b/.github/workflows/template-validate.yml
@@ -31,5 +31,5 @@ jobs:
 
       - name: Template Validation
         run: |
-          nuclei -t . -v
+          nuclei -validate -t ~/nuclei-templates/
         shell: bash
