--- a/vulnerabilities/other/clockwatch-enterprise-rce.yaml
+++ b/vulnerabilities/other/clockwatch-enterprise-rce.yaml
@@ -14,9 +14,12 @@ network:
     host:
       - "{{Hostname}}"
       - "{{Hostname}}:1001"
-
+    matchers-condition: or
     matchers:
       - type: word
         part: interactsh_protocol
         words:
           - "dns"
+      - type: word
+        words:
+          - "OK-C"
