--- a/vulnerabilities/other/clockwatch-enterprise-rce.yaml
+++ b/vulnerabilities/other/clockwatch-enterprise-rce.yaml
@@ -4,7 +4,7 @@ info:
   name: ClockWatch Enterprise RCE
   author: gy741
   severity: critical
-  tags: clockwatch,rce
+  tags: clockwatch,rce,network
   reference: https://blog.grimm-co.com/2021/07/old-dog-same-tricks.html
 
 network:
