--- a/vulnerabilities/other/clockwatch-enterprise-rce.yaml
+++ b/vulnerabilities/other/clockwatch-enterprise-rce.yaml
@@ -14,7 +14,7 @@ network:
     host:
       - "{{Hostname}}"
       - "{{Hostname}}:1001"
-    matchers-condition: or
+    matchers-condition: and
     matchers:
       - type: word
         part: interactsh_protocol
