--- a/technologies/sap-igs-detect.yaml
+++ b/technologies/sap-igs-detect.yaml
@@ -5,7 +5,7 @@ info:
   author: _generic_human_
   description: Detection of SAP Internet Graphics Server (IGS)
   severity: info
-  tags: sap,webserver,igs
+  tags: sap,tech,igs
 
 requests:
   - method: GET
