--- a/.github/workflows/template-validate.yml
+++ b/.github/workflows/template-validate.yml
@@ -31,5 +31,5 @@ jobs:
 
       - name: Template Validation
         run: |
-          nuclei -validate -t .
+          nuclei -validate -t . -exclude .pre-commit-config.yaml
         shell: bash
