--- a/technologies/default-lucee-page.yaml
+++ b/technologies/default-lucee-page.yaml
@@ -16,3 +16,9 @@ requests:
         words:
           - "<title>Rapid web development with Lucee!</title>"
         part: body
+    extractors:
+      - type: regex
+        part: body
+        group: 1
+        regex:
+          - "Lucee ([0-9.\-A-Z]+) on your system"
