--- a/technologies/default-lucee-page.yaml
+++ b/technologies/default-lucee-page.yaml
@@ -21,4 +21,4 @@ requests:
         part: body
         group: 1
         regex:
-          - "Lucee ([0-9.\-A-Z]+) on your system"
+          - "Lucee ([0-9.-A-Z]+) on your system"
