--- a/exposed-panels/lucee-login.yaml
+++ b/exposed-panels/lucee-login.yaml
@@ -19,6 +19,7 @@ requests:
         words:
           - '<title>Login - Lucee Web Administrator</title>'
           - '<title>Login - Lucee Server Administrator</title>'
+        condition: or
       - type: status
         status:
           - 200
