filename and matcher update

--- a/iot/open-mjpg-streamer.yaml
+++ b/iot/open-mjpg-streamer.yaml
@@ -11,13 +11,16 @@ info:
 requests:
   - method: GET
     path:
-      - "{{BaseURL}}/?action=snapshot"
+      - "{{BaseURL}}/?action=stream"
+
+    max-size: 2048
     matchers-condition: and
     matchers:
       - type: word
         words:
-          - 'JFIF'
-        part: body
+          - 'MJPG-Streamer/0.2'
+        part: header
+
       - type: status
         status:
           - 200
