--- a/vulnerabilities/jira/jira-unauthenticated-installed-gadgets.yaml
+++ b/vulnerabilities/jira/jira-unauthenticated-installed-gadgets.yaml
@@ -5,6 +5,7 @@ info:
   author: philippedelteil
   severity: info
   description: Some Jira instances allow to read the installed gadgets (sometimes it's also possible to read config xml file for some gadgets)
+  tags: atlassian,jira
 
 requests:
   - method: GET
