Added tags and updated matcher

--- a/iot/stem-audio-table-private-keys.yaml
+++ b/iot/stem-audio-table-private-keys.yaml
@@ -5,7 +5,7 @@ info:
   author: gy741
   severity: high
   reference: https://blog.grimm-co.com/2021/06/the-walls-have-ears.html
-  tags: stem,config,exposure
+  tags: stem,config,exposure,iot
 
 requests:
   - method: GET
@@ -17,7 +17,6 @@ requests:
       - type: word
         words:
           - "BEGIN RSA PRIVATE KEY"
-        condition: or
 
       - type: status
         status:
@@ -25,6 +24,4 @@ requests:
 
       - type: dsl
         dsl:
-          - '!contains(body_2, "<html")'
-          - '!contains(body_2, "<HTML")'
-        condition: and
+          - '!contains(tolower(body), "<html")'
