--- a/technologies/openam-detection.yaml
+++ b/technologies/openam-detection.yaml
@@ -2,7 +2,7 @@ id: openam-detection
 
 info:
   name: Detect OpenAM and OpenSSO
-  author: philippedelteil
+  author: philippedelteil,melbadry9,xelkomy
   severity: info
 
 requests:
@@ -27,6 +27,7 @@ requests:
       - "{{BaseURL}}/am/XUI/Login"
       - "{{BaseURL}}/am/json/serverinfo/*"
       - "{{BaseURL}}/openam/json/serverinfo/*"
+
     redirects: true
     max-redirects: 2
     matchers-condition: and
@@ -40,9 +41,11 @@ requests:
           - 'FRForgotUsername'
           - 'successfulUserRegistrationDestination'
         condition: or
+
       - type: status
         status:
           - 200
+
     extractors:
       - type: regex
         part: body
