--- a/exposed-panels/checkpoint-panel.yaml
+++ b/exposed-panels/checkpoint-panel.yaml
@@ -1,7 +1,7 @@
 id: checkpoint-panel
 
 info:
-  name: Checkpoint-panel
+  name: Checkpoint Panel
   author: 0x240x23elu
   severity: info
   tags: panel,checkpoint
@@ -10,7 +10,7 @@ requests:
   - method: GET
     path:
       - "{{BaseURL}}/sslvpn/Login/Login"
-
+      - "{{BaseURL}}/Login/Login"
     matchers-condition: and
     redirects: true
     matchers:
@@ -20,8 +20,9 @@ requests:
       - type: word
         part: body
         words:
-          - "Check Point Software"
-          - "sslvpn/Login"
+          - "Check Point Software Technologies Ltd. All rights reserved."
+          - "/Login/images/CompanyLogo.png"
+        condition: and
       - type: word
         part: header
         words:
