--- a/vulnerabilities/other/icewarp-webclient-rce.yaml
+++ b/vulnerabilities/other/icewarp-webclient-rce.yaml
@@ -20,7 +20,7 @@ requests:
     matchers:
       - type: word
         words:
-          - "Microsoft Windows"
+          - "Microsoft Windows [Version"
         part: body
 
       - type: status
