--- a/takeovers/ceros-takeover.yaml
+++ b/takeovers/ceros-takeover.yaml
@@ -3,9 +3,11 @@ id: ceros-takeover
 info:
   name: ceros takeover detection
   author: abison_binoy
-  severity: high
+  severity: info
   tags: takeover
-  reference: https://www.ceros.com/educate/help_center/using-your-own-vanity-domain/
+  reference: |
+        - https://twitter.com/abison_binoy/status/1412606224030339072
+        - https://www.ceros.com/educate/help_center/using-your-own-vanity-domain/
 
 requests:
   - method: GET
@@ -15,6 +17,7 @@ requests:
     matchers:
       - type: word
         words:
-          - Sorry, page not found
-          - Please check the url and
+          - "Sorry, page not found"
+          - "Please check the url and"
+          - "https://view.ceros.com/"
         condition: and
