--- a/takeovers/ceros-takeover.yaml
+++ b/takeovers/ceros-takeover.yaml
@@ -19,5 +19,5 @@ requests:
         words:
           - "Sorry, page not found"
           - "Please check the url and"
-          - "https://view.ceros.com/"
+          - "/view.ceros.com/"
         condition: and
