Added the suggested changes.
Added the suggested changes.

--- a/exposed-panels/labtech-panel.yaml
+++ b/exposed-panels/labtech-panel.yaml
@@ -12,6 +12,7 @@ requests:
       - "{{BaseURL}}/WCC2/"
     redirects: true
     max-redirects: 3
+    matchers-conditon: and
     matchers:
       - type: word
         words:
@@ -24,7 +25,7 @@ requests:
         part: body
         condtion: and
 
-      - type: word
-        words:
-          - "Welcome to the LabTech Web Portal"
-        part: header
+      - type: status
+        status:
+          - 200
+        
