--- a/exposed-panels/labtech-panel.yaml
+++ b/exposed-panels/labtech-panel.yaml
@@ -1,18 +1,19 @@
-id: LabTech Web Portal
+id: labtech-panel
 
 info:
   name: LabTech Web Portal
   author: deFr0ggy, @github.com/deFr0ggy
   severity: info
-  tags: panel
+  tags: panel,labtech
 
 requests:
   - method: GET
     path:
       - "{{BaseURL}}/WCC2/"
+
     redirects: true
-    max-redirects: 3
-    matchers-conditon: and
+    max-redirects: 2
+    matchers-condition: and
     matchers:
       - type: word
         words:
@@ -23,9 +24,8 @@ requests:
           - "Technician Login"
           - '<form action="/WCC2/Home/Login" autocomplete="off" method="post">'
         part: body
-        condtion: and
+        condition: or
 
       - type: status
         status:
           - 200
-        
