--- a/technologies/oauth2-detect.yaml
+++ b/technologies/oauth2-detect.yaml
@@ -11,9 +11,18 @@ requests:
   - method: POST
     path:
       - "{{BaseURL}}/oauth/token"
+
     body: "grant_type=authorization_code&client_id=xxx&redirect_uri=https%3A%2F%2Fprojectdiscovery.io&code=xxx&client_secret=xxx"
 
+    matchers-condition: and
     matchers:
       - type: status
         status:
           - 401
+          - 400
+        condition: or
+
+      - type: word
+        part: body
+        words:
+          - 'error":"invalid_client"'
