--- a/vulnerabilities/wordpress/wp-ambience-xss.yaml
+++ b/vulnerabilities/wordpress/wp-ambience-xss.yaml
@@ -5,7 +5,7 @@ info:
   author: daffainfo
   severity: medium
   reference: https://www.exploit-db.com/exploits/38568
-  tags: wordpress,xss
+  tags: wordpress,xss,wp-plugin
 
 requests:
   - method: GET
