--- a/vulnerabilities/wordpress/wp-securimage-xss.yaml
+++ b/vulnerabilities/wordpress/wp-securimage-xss.yaml
@@ -5,7 +5,7 @@ info:
   author: daffainfo
   severity: medium
   reference: https://www.securityfocus.com/bid/59816/info
-  tags: wordpress,xss
+  tags: wordpress,xss,wp-plugin
 
 requests:
   - method: GET
