--- a/vulnerabilities/wordpress/wp-socialfit-xss.yaml
+++ b/vulnerabilities/wordpress/wp-socialfit-xss.yaml
@@ -8,7 +8,7 @@ info:
     SocialFit plugin for WordPress is prone to a cross-site scripting vulnerability because it fails to properly sanitize user-supplied input.
   reference: |
     - https://www.exploit-db.com/exploits/37481
-  tags: wordpress,xss
+  tags: wordpress,xss,wp-plugin
 
 requests:
   - method: GET
