--- a/exposures/configs/git-config.yaml
+++ b/exposures/configs/git-config.yaml
@@ -36,7 +36,13 @@ requests:
           - "[core]"
           - "root"
         condition: or
-
+      
+      - type: word
+        part: body
+        negative: true
+        words:
+          - "Autodiscover/AutodiscoverService.svc"
+      
       - type: dsl
         dsl:
           - "!contains(tolower(body), '<html')"
