--- a/takeovers/wix-takeover.yaml
+++ b/takeovers/wix-takeover.yaml
@@ -10,14 +10,12 @@ requests:
   - method: GET
     path:
       - "{{BaseURL}}"
-    headers:
-      User-Agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.114 Safari/537.36
 
-    matchers-condition: and 
+    matchers-condition: and
     matchers:
       - type: word
         words:
-          - Error ConnectYourDomain occurred
+          - 'Error ConnectYourDomain occurred'
       - type: status
         status:
           - 404
