--- a/exposed-panels/fastapi-docs.yaml
+++ b/exposed-panels/fastapi-docs.yaml
@@ -1,16 +1,17 @@
 id: fastapi-docs
 
 info:
-  name: FastAPI
+  name: FastAPI Docs
   author: github.com/its0x08
   severity: info
+  tags: fastapi,tech,panel
+
 requests:
   - method: GET
     path:
       - "{{BaseURL}}/docs"
       - "{{BaseURL}}/redoc"
       - "{{BaseURL}}/openapi.json"
-    condition: or
 
     matchers:
       - type: word
