--- a/iot/hp-device-info-detect.yaml
+++ b/iot/hp-device-info-detect.yaml
@@ -15,6 +15,8 @@ requests:
         words:
           - "Device Information"
           - "hp"
+        condition: and
+
       - type: status
         status:
           - 200
