--- a/misconfiguration/hp-printer-unanuthorized-access.yaml
+++ b/misconfiguration/hp-printer-unanuthorized-access.yaml
@@ -1,18 +1,24 @@
-id: hp-printer-unauthorized-access
+id: unauthorized-hp-printer
+
 info:
-  name: hp-printer-unauthorized-access
+  name: Unauthorized HP Printer
   author: pussycat0x
-  severity: High
-  tags: hp,unauthorized
+  severity: high
+  tags: hp,iot,unauth
+
 requests:
   - method: GET
     path:
       - "{{BaseURL}}/SSI/Auth/ip_snmp.htm"
+
     matchers-condition: and
     matchers:
       - type: word
         words:
           - "HP"
+          - "<h1>SNMP</h1>"
+        condition: and
+
       - type: status
         status:
           - 200
