--- a/technologies/crush-ftp-detect.yaml
+++ b/technologies/crush-ftp-detect.yaml
@@ -4,13 +4,11 @@ info:
   name: Crush FTP
   author: pussycat0x
   severity: info
-  tags: tech
+  tags: tech,ftp
 requests:
   - method: GET
     path:
       - "{{BaseURL}}/WebInterface/login.html"
-      - "{{BaseURL}}/WebInterface/jQuery/reset.html"
-      - "{{BaseURL}}/WebInterface/jQuery/reset.html"
 
     redirects: true
     matchers-condition: and
