--- a/misconfiguration/wamp-server-configuration.yaml
+++ b/misconfiguration/wamp-server-configuration.yaml
@@ -1,20 +1,24 @@
-id: default-wamp-server-page-configuration.
+id: wamp-server-configuration
+
 info:
   name: default-wamp-server-page
   author: pussycat0x
   severity: medium
   description: Wamp default page will expose sensitive configuration and vhosts.
   reference: https://www.exploit-db.com/ghdb/6891.
-  tags: tech,wamp,
+  tags: wamp
+
 requests:
   - method: GET
     path:
-      - "{{BaseURL}}/"
+      - "{{BaseURL}}"
+
     matchers-condition: and
     matchers:
-      - type: word
-        words:
-          - "wamp"
+      - type: dsl
+        dsl:
+          - 'contains(tolower(body), "wampserver")'
+
       - type: status
         status:
           - 200
