--- a/technologies/web-ftp-detect.yaml
+++ b/technologies/web-ftp-detect.yaml
@@ -1,14 +1,17 @@
 id: web-ftp-detect
+
 info:
-  name: web ftp detection
+  name: Web FTP Detection
   author: pussycat0x
   severity: info
   reference: https://www.exploit-db.com/ghdb/7013
-  tags: web-ftp,detection,technology
+  tags: webftp,tech,ftp
+
 requests:
   - method: GET
     path:
       - "{{BaseURL}}/cgi-bin/upload/web-ftp.cgi"
+
     matchers-condition: and
     matchers:
       - type: word
