--- a/vulnerabilities/wordpress/wp-plugin-lifterlms.yaml
+++ b/vulnerabilities/wordpress/wp-plugin-lifterlms.yaml
@@ -1,11 +1,13 @@
 id: wordpress-plugins-lifterlms
+
 info:
-  name: WordPress Plugin lifterlms
+  name: WordPress Plugin lifterlms Listing
   author: pussycat0x
   severity: low
   description: Searches for sensitive directories present in the wordpress-plugins plugin.
   reference: https://www.exploit-db.com/ghdb/6420
   tags: wordpress,listing
+
 requests:
   - method: GET
     path:
@@ -16,6 +18,8 @@ requests:
         words:
           - "Index of"
           - "/wp-content/plugins/lifterlms/"
+        condition: and
+
       - type: status
         status:
           - 200
