--- a/exposed-panels/faraday-login.yaml
+++ b/exposed-panels/faraday-login.yaml
@@ -5,7 +5,7 @@ info:
   author: dhiyaneshDK
   severity: info
   reference: https://www.shodan.io/search?query=html%3A%22faradayApp%22
-  tags: panel
+  tags: panel,faraday
 
 requests:
   - method: GET
@@ -17,7 +17,7 @@ requests:
       - type: word
         words:
           - 'ng-app="faradayApp">'
-        condition: and
+
       - type: status
         status:
           - 200
