--- a/exposed-panels/adobe-media-server.yaml
+++ b/exposed-panels/adobe-media-server.yaml
@@ -17,7 +17,7 @@ requests:
       - type: word
         words:
           - '<title>Adobe Media Server</title>'
-
+          - 'Adobe Systems Incorporated'
         condition: and
 
       - type: status
