--- a/exposed-panels/coldfusion-administrator-login.yaml
+++ b/exposed-panels/coldfusion-administrator-login.yaml
@@ -5,20 +5,18 @@ info:
   author: dhiyaneshDK
   severity: info
   reference: https://www.shodan.io/search?query=http.title%3A%22ColdFusion+Administrator+Login%22
-  tags: panel,adobe
+  tags: panel,coldfusion,adobe
 
 requests:
   - method: GET
     path:
-      - '{{BaseURL}}/CFIDE/administrator/'
+      - '{{BaseURL}}'
 
     matchers-condition: and
     matchers:
       - type: word
         words:
           - '<title>ColdFusion Administrator Login</title>'
-
-        condition: and
 
       - type: status
         status:
