[dead-host-with-cname] added extractor

--- a/dns/dead-host-with-cname.yaml
+++ b/dns/dead-host-with-cname.yaml
@@ -21,3 +21,9 @@ dns:
       - type: word
         words:
           - "IN\tCNAME"
+
+    extractors:
+      - type: regex
+        group: 1
+        regex:
+          - "IN\tCNAME\t(.+)"
