--- a/technologies/default-codeigniter-page.yaml
+++ b/technologies/default-codeigniter-page.yaml
@@ -14,9 +14,9 @@ requests:
 
     matchers-condition: and
     matchers:
-      - type: word
-        words:
-          - '<title>Welcome to CodeIgniter</title>'
+      - type: regex
+        regex:
+          - '^<title>Welcome to CodeIgniter\s?(?:[0-9]!)?</title>$'
 
       - type: status
         status:
