--- a/dns/dead-host-with-cname.yaml
+++ b/dns/dead-host-with-cname.yaml
@@ -1,8 +1,8 @@
 id: dead-host-with-cname
 
 info:
-  name: dead-host-with-cname
-  author: pdteam
+  name: Detect Dangling cnames
+  author: pdteam,nytr0gen
   severity: info
   tags: dns
 
