Update-sassy-social-share-xss

--- a/vulnerabilities/wordpress/sassy-social-share.yaml
+++ b/vulnerabilities/wordpress/sassy-social-share.yaml
@@ -15,5 +15,10 @@ requests:
     matchers:
       - type: word
         words:
-          - '{"facebook_urls":[{"<img src=x onerror=alert(document.domain)>":""}],"status":1,"message":{"":{"twitter":0}}}'
+          - '{"facebook":1,"facebook_urls":[{"<img src=x onerror=alert(document.domain)>":""}],"status":1,"message":'
         part: body
+        condition: and
+
+      - type: status
+        status:
+          - 200
