--- a/exposures/configs/keycloak-openid-config.yaml
+++ b/exposures/configs/keycloak-openid-config.yaml
@@ -11,6 +11,7 @@ requests:
   - method: GET
     path:
       - "{{BaseURL}}/.well-known/openid-configuration"
+      - "{{BaseURL}}/auth/realms/master/.well-known/openid-configuration"
 
     matchers-condition: and
     matchers:
