--- a/vulnerabilities/wordpress/sassy-social-share.yaml
+++ b/vulnerabilities/wordpress/sassy-social-share.yaml
@@ -15,7 +15,9 @@ requests:
     matchers:
       - type: word
         words:
-          - '{"facebook":1,"facebook_urls":[{"<img src=x onerror=alert(document.domain)>":""}],"status":1,"message":'
+          - '[{"<img src=x onerror=alert(document.domain)>":""}]'
+          - 'facebook'
+          - 'twitter'
         part: body
         condition: and
 
