--- a/vulnerabilities/wordpress/wordpress-updraftplus-pem-key.yaml
+++ b/vulnerabilities/wordpress/wordpress-updraftplus-pem-key.yaml
@@ -3,7 +3,7 @@ id: updraftplus-pem-keys
 info:
   name: UpdraftPlus Plugin Pem Key
   author: dhiyaneshDk
-  severity: medium
+  severity: info
   reference: https://www.exploit-db.com/ghdb/6437
   tags: wordpress
 
