--- a/vulnerabilities/wordpress/wordpress-updraftplus-pem-key.yaml
+++ b/vulnerabilities/wordpress/wordpress-updraftplus-pem-key.yaml
@@ -5,7 +5,7 @@ info:
   author: dhiyaneshDk
   severity: info
   reference: https://www.exploit-db.com/ghdb/6437
-  tags: wordpress
+  tags: wordpress,wp-plugin
 
 requests:
   - method: GET
