--- a/vulnerabilities/wordpress/wp-custom-tables-xss.yaml
+++ b/vulnerabilities/wordpress/wp-custom-tables-xss.yaml
@@ -4,6 +4,7 @@ info:
   name: WordPress Custom Tables Plugin 3.4.4 - Reflected Cross Site Scripting (XSS)
   author: daffainfo
   severity: medium
+  description: WordPress custom tables Plugin 'key' Parameter Cross Site Scripting Vulnerability
   reference: https://www.securityfocus.com/bid/54326/info
   tags: wordpress,xss,wp-plugin
 
