--- a/network/printer-sensitiveinfo-leak.yaml
+++ b/network/printer-sensitiveinfo-leak.yaml
@@ -14,4 +14,6 @@ network:
     matchers:
       - type: word
         words:
-          - "CODE"
+          - "CODE="
+          - "PJL INFO STATUS"
+        condition: and
