Update and rename printer-sensitiveinfo-leak.yaml to printers-info-leak.yaml

--- a/network/printers-info-leak.yaml
+++ b/network/printers-info-leak.yaml
@@ -1,9 +1,9 @@
-id: printer-sensitiveinfo-leaks
+id: printers-info-leak
 
 info:
-  name: unauthorized printer access
+  name: Unauthorized Printer Access
   author: pussycat0x
-  severity: high
+  severity: info
   tags: network,iot
   reference: https://book.hacktricks.xyz/pentesting/9100-pjl
 network:
