--- a/vulnerabilities/wordpress/nativechurch-wp-theme-lfd.yaml
+++ b/vulnerabilities/wordpress/nativechurch-wp-theme-lfd.yaml
@@ -19,9 +19,7 @@ requests:
         words:
           - "DB_NAME"
           - "DB_PASSWORD"
+          - "DB_HOST"
+          - "The base configurations of the WordPress"
         part: body
         condition: and
-
-      - type: status
-        status:
-          - 200
