--- a/technologies/seeddms-detect.yaml
+++ b/technologies/seeddms-detect.yaml
@@ -8,7 +8,9 @@ requests:
   - method: GET
     path:
       - "{{BaseURL}}/out/out.Login.php?referuri=%2Fout%2Fout.ViewFolder.php"
-    redirects: true  
+
+    redirects: true
+    max-redirects: 2
     matchers-condition: and
     matchers:
       - type: word
