--- a/technologies/node-red-detect.yaml
+++ b/technologies/node-red-detect.yaml
@@ -4,7 +4,7 @@ info:
   name: Node RED Detect
   author: pikpikcu
   severity: info
-  tags: tech,node-red,apache
+  tags: tech,apache
 
 requests:
   - method: GET
