--- a/wp-plugin-memphis-documents-library-lfi.yaml
+++ b/wp-plugin-memphis-documents-library-lfi.yaml
@@ -2,6 +2,7 @@ id: wp-plugin-memphis-documents-library-lfi
 
 info:
   name: WordPress Plugin Memphis Document Library 3.1.5 LFI
+  author: 0x_Akoko
   severity: high
   tags: wordpress,wp-plugin,lfi,rfd
   description: arbitrary file download in Memphis Document Library 3.1.5
