--- a/vulnerabilities/wordpress/wp-memphis-documents-library-lfi.yaml
+++ b/vulnerabilities/wordpress/wp-memphis-documents-library-lfi.yaml
@@ -1,12 +1,14 @@
-id: wp-plugin-memphis-documents-library-lfi
+id: wp-memphis-documents-library-lfi
 
 info:
   name: WordPress Plugin Memphis Document Library 3.1.5 LFI
   author: 0x_Akoko
   severity: high
-  tags: wordpress,wp-plugin,lfi,rfd
-  description: arbitrary file download in Memphis Document Library 3.1.5
-  reference: https://www.exploit-db.com/exploits/39593
+  tags: wordpress,wp-plugin,lfi
+  description: Arbitrary file download in Memphis Document Library 3.1.5
+  reference: |
+        - https://www.exploit-db.com/exploits/39593
+        - https://wpscan.com/vulnerability/53999c06-05ca-44f1-b713-1e4d6b4a3f9f
 
 requests:
   - method: GET
