--- a/default-logins/aem/adobe-aem-default-credentials.yaml
+++ b/default-logins/aem/adobe-aem-default-credentials.yaml
@@ -57,9 +57,11 @@ requests:
     matchers:
       - type: status
         status:
-          - 302
+          - 200
 
       - type: word
         part: header
         words:
-          - crx
+          - login-token
+          - crx.default
+        condition: and
