--- a/takeovers/heroku-takeover.yaml
+++ b/takeovers/heroku-takeover.yaml
@@ -2,7 +2,7 @@ id: heroku-takeover
 
 info:
   name: heroku takeover detection
-  author: 0xPrial
+  author: 0xPrial,pdteam
   severity: high
   tags: takeover
   reference: https://github.com/EdOverflow/can-i-take-over-xyz
