--- a/takeovers/netlify-takeover.yaml
+++ b/takeovers/netlify-takeover.yaml
@@ -2,7 +2,7 @@ id: netlify-takeover
 
 info:
   name: netlify takeover detection
-  author: 0xPrial
+  author: 0xPrial,pdteam
   severity: high
   tags: takeover
   reference: https://github.com/EdOverflow/can-i-take-over-xyz
