--- a/exposures/configs/exposed-gitignore.yaml
+++ b/exposures/configs/exposed-gitignore.yaml
@@ -24,7 +24,7 @@ requests:
 
       - type: dsl
         dsl:
-          - '!contains(tolower(body), "<html")'
+          - '!contains(tolower(body), "<html") && !contains(tolower(body), "<!doctype") &&  !contains(tolower(body), "<script")'
 
       - type: dsl
         dsl:
