--- a/workflows/lucee-workflow.yaml
+++ b/workflows/lucee-workflow.yaml
@@ -2,7 +2,7 @@ id: lucee-workflow
 
 info:
   name: Lucee Detection Workflow
-  author: geeknik
+  author: geeknik,dhiyaneshDk
   description: A simple workflow that runs all Lucee related nuclei templates on given target.
   tags: workflow
 
@@ -12,3 +12,4 @@ workflows:
       - template: technologies/default-lucee-page.yaml
       - template: exposed-panels/lucee-login.yaml
       - template: exposures/logs/lucee-stack-trace.yaml
+      - template: cve/2021/CVE-2021-21307.yaml
