No more manual updates with tags support

--- a/workflows/lucee-workflow.yaml
+++ b/workflows/lucee-workflow.yaml
@@ -9,7 +9,4 @@ info:
 workflows:
   - template: technologies/lucee-detect.yaml
     subtemplates:
-      - template: technologies/default-lucee-page.yaml
-      - template: exposed-panels/lucee-login.yaml
-      - template: exposures/logs/lucee-stack-trace.yaml
-      - template: cve/2021/CVE-2021-21307.yaml
+      - tags: lucee
