--- a/.github/workflows/templates-stats.yml
+++ b/.github/workflows/templates-stats.yml
@@ -18,6 +18,13 @@ jobs:
         with:
           go-version: 1.14
 
+      - name: Cache Go
+        id: cache-go
+        uses: actions/cache@v2
+        with:
+          path: /home/runner/go
+          key: ${{ runner.os }}-go
+
       - name: Installing Template Stats
         env:
           GO111MODULE: on
@@ -37,6 +44,8 @@ jobs:
 
       - name: Commit files
         run: |
+          git add TEMPLATES-STATS.md
+          git add TEMPLATES-STATS.json
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git commit -m "Auto Generated Templates Stats [$(date)] :robot:" -a
