--- a/.github/workflows/templates-stats.yml
+++ b/.github/workflows/templates-stats.yml
@@ -1,4 +1,4 @@
-name: Templates Stats
+name: 🗒 Templates Stats
 
 on:
   create:
@@ -34,12 +34,12 @@ jobs:
 
       - name: Markdown Stats
         run: |
-          templates-stats -output TEMPLATES-STATS.md -path .
+          templates-stats -output TEMPLATES-STATS.md -path /home/runner/work/nuclei-templates/nuclei-templates/
         shell: bash
 
       - name: JSON Stats
         run: |
-          templates-stats -output TEMPLATES-STATS.json -json -path .
+          templates-stats -output TEMPLATES-STATS.json -json -path /home/runner/work/nuclei-templates/nuclei-templates/
         shell: bash
 
       - name: Commit files
