--- a/default-logins/dell/dell-idrac9-default-login.yaml
+++ b/default-logins/dell/dell-idrac9-default-login.yaml
@@ -25,6 +25,9 @@ requests:
       - type: status
         status:
           - 201
+          - 200
+        condition: or
+
       - type: word
         part: body
         words:
