--- a/technologies/favicon-detection.yaml
+++ b/technologies/favicon-detection.yaml
@@ -2032,3 +2032,7 @@ requests:
         name: "OpenSNS"
         dsl:
           - "status_code==200 && (\"1167011145\" == mmh3(base64_py(body)))"
+      - type: dsl
+        name: "SpamSniper"
+        dsl:
+          - "status_code==200 && (\"-1000719429\" == mmh3(base64_py(body)))"
