--- a/.github/workflows/templates-stats.yml
+++ b/.github/workflows/templates-stats.yml
@@ -26,6 +26,7 @@ jobs:
           key: ${{ runner.os }}-go
 
       - name: Installing Template Stats
+        if: steps.cache-go.outputs.cache-hit != 'true'
         env:
           GO111MODULE: on
         run: |
@@ -44,6 +45,7 @@ jobs:
 
       - name: Commit files
         run: |
+          git pull --tags -f
           git add TEMPLATES-STATS.md
           git add TEMPLATES-STATS.json
           git config --local user.email "action@github.com"
